<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.register.RegisterActivity">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/topId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerHorizontal="true"
                android:text="@string/register_as"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/topId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:padding="20dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:background="@color/small_blue"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="100dp">

                    <TextView

                        android:text="@string/student"
                        android:id="@+id/studentTextId"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:background="@color/small_blue"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="100dp">

                    <TextView

                        android:text="@string/teacher"
                        android:id="@+id/teacherTextId"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>








    </RelativeLayout>

</RelativeLayout>