<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.teacherRegister.TeacherRegister">

    <RelativeLayout
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/teacher_register_toolbar">

        </include>
    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/pick_image"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/teacherImageId"
                    android:src="@drawable/profile"
                    android:layout_marginTop="10dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                </de.hdodenhof.circleimageview.CircleImageView>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name"
                        app:boxBackgroundMode="outline"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginHorizontal="20dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:endIconMode="clear_text"
                        android:layout_marginBottom="5dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/teacherNameId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_employee_id"
                        app:boxBackgroundMode="outline"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginHorizontal="20dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:endIconMode="clear_text"
                        android:layout_marginBottom="5dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/teacherUniversityId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        app:boxBackgroundMode="outline"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginHorizontal="20dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:endIconMode="clear_text"
                        android:layout_marginBottom="5dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/teacherEmailId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phone"
                        app:boxBackgroundMode="outline"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginHorizontal="20dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:endIconMode="clear_text"
                        android:layout_marginBottom="5dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/teacherMobileId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_office"
                        app:boxBackgroundMode="outline"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginHorizontal="20dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:endIconMode="clear_text"
                        android:layout_marginBottom="5dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/teacherOfficeId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:weightSum="3"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_weight="1.2"
                            android:gravity="center"
                            android:text="@string/dept"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                        </TextView>

                        <Spinner
                            android:id="@+id/deptSpinnerId"
                            android:spinnerMode="dialog"
                            android:entries="@array/department"
                            android:background="@color/small_blue"
                            android:layout_weight="1.8"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                        </Spinner>

                    </LinearLayout>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:id="@+id/teacherDeptId"
                        android:text="CSE"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                    <LinearLayout
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:weightSum="3"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_weight="1.2"
                            android:gravity="center"
                            android:text="@string/designation"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                        </TextView>

                        <Spinner
                            android:id="@+id/DesignationSpinnerId"
                            android:spinnerMode="dialog"
                            android:entries="@array/designation"
                            android:background="@color/small_blue"
                            android:layout_weight="1.8"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                        </Spinner>



                    </LinearLayout>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:id="@+id/teacherDesignationId"
                        android:text="Lecturer"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>


                    <Button
                        android:text="@string/register"
                        android:textSize="18sp"
                        android:enabled="false"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        android:id="@+id/teacherRegisterButtonId"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/small_blue"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">
                    </Button>

                </LinearLayout>



            </LinearLayout>

            <ProgressBar
                android:id="@+id/teacherProgressId"
                android:layout_centerInParent="true"
                android:layout_width="60dp"
                android:layout_height="60dp">

            </ProgressBar>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>