<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.ui.login.LoginActivity">
    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/loginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/login_here"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        app:boxBackgroundMode="outline"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginHorizontal="20dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:endIconMode="clear_text"
                        android:layout_marginBottom="5dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/noteDialogueName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:boxBackgroundMode="outline"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginHorizontal="20dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:endIconMode="password_toggle"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/loginPasswordEditTextId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:padding="20dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:text="@string/login"
                        android:enabled="false"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:id="@+id/loginButtonId"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/small_blue"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">
                    </Button>




                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>



    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/login_toolbar">

        </include>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loginProgressId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_width="48dp"
        android:layout_height="48dp">

    </ProgressBar>

</RelativeLayout>